--- a/src/pages/wallet/AssetPage.module.scss
+++ b/src/pages/wallet/AssetPage.module.scss
@@ -45,6 +45,18 @@
   padding-bottom: 1.6rem;
 }
 
+.asset_info_denom {
+  @include flex(flex-start);
+  align-items: center;
+  width: fit-content;
+  background-color: var(--button-default-bg);
+  margin-top: 1rem;
+  padding: 0.2rem 0.6rem;
+  border-radius: 2rem;
+  font-size: 10pt;
+  font-weight: 500;
+}
+
 .actions {
   @include flex(space-between);
   background-color: var(--card-bg);
